--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>min-pad</title>
+    <title>Minpad</title>
+
+    <link rel="stylesheet" href="./node_modules/re-csset/reset.css">
+    <link rel="stylesheet" href="./src/styles/base.css">
+
+    <script defer src="./src/app.js"></script>
 </head>
 
 <body>
-    <h1>MIN-PAD</h1>
-
+    <div class="wrapper">
+        <input class="line">
+    </div>
 </body>
 
 </html>
