feature: behaviour in editor.js. gives the app text editor behaviour

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="./node_modules/re-csset/reset.css">
     <link rel="stylesheet" href="./src/styles/base.css">
 
-    <script defer src="./src/app.js"></script>
+    <script defer src="./src/editor.js"></script>
+    <script defer src="./src/markdown.js"></script>
 </head>
 
 <body>
     <div class="wrapper">
-        <textarea class="text">
+        <input class="text">
     </div>
 </body>
 
