--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
 
 <body>
     <div class="wrapper">
-        <input class="line">
-    </div>
+        <!-- <p class="line"> KKKKKKKKKKKKKKKKKKKKKKKK</p>
+        <p class="line"> KKKKKKKKKKKKKKKKKKKKKKKK</p>
+        <p class="line"> KKKKKKKKKKKKKKKKKKKKKKKK</p> -->
+
+        <input class="line" contenteditable="false" />
+        <!-- <p class="line" contenteditable>banana</p>
+        <p class="line" contenteditable>banana</p>
+        <p class="line" contenteditable>banana</p>
+    </div> -->
 </body>
 
 </html>
